# stock-opportunity-lab

./: .dockerignore  .gitignore  .vercelignore  DEPLOYMENT.md  DESIGN.md  Dockerfile  README.md  TODO.md  architecture.md  edgeone.json  package-lock.json  package.json  render.yaml  requirements.txt  server.py  vercel.json
.github/workflows/: github-pages.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py  utils.py
backend/app/services/: ai.py  backtest.py  client_auth.py  crisis_monitor.py  data_provider.py  evolution.py  financials.py  intraday_alerts.py  learning.py  learning_store.py  notification_settings.py  notifications.py  screener.py  sector_flow.py  stock_analysis.py  stock_intelligence.py  strategy.py  strategy_optimizer.py  task_manager.py  wechat_knowledge.py
backend/tests/: test_core.py
backend/tests/fixtures/: spot_20260602.csv
backend/tests/fixtures/history/: 000001.csv  300001.csv
cloud-functions/: [[default]].py  requirements.txt
cloud-functions/api/: [[default]].py  index.py
docs/design-tree/: stitch-visual-review-2026-06-03.md  stock-opportunity-lab.md
docs/prd/: stock-opportunity-lab-prd.md
docs/prompts/: google-stitch-polish-v3.md  google-stitch-redesign-v2.md  google-stitch-stock-opportunity-lab.md
docs/superpowers/plans/: 2026-06-04-financial-reports.md  2026-06-05-self-evolving-stock-lab.md  2026-06-05-stock-intelligence.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
scripts/: build-edgeone.mjs
(+10 files in other folders)
